network-policy/app-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-service
  labels:
    app.kubernetes.io/name: app-service
