network-policy/app-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app.kubernetes.io/name: app-service
  ports:
    - name: http
      port: 80
      targetPort: http
